--- a/2020_1_모각코/.vscode/launch.json
+++ b/2020_1_모각코/.vscode/launch.json
@@ -8,12 +8,12 @@
             "name": "(Windows) 시작",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "프로그램 이름 입력(예: ${workspaceFolder}/a.exe)",
+            "program": "7568.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": false
+            "externalConsole": true
         }
     ]
 }
